[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/ArmorBar.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/HealthBar/Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/HealthBar/Frame.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/HealthBar/Filling.png" type="Texture" id=4]

[node name="ArmorBar" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelmetUnder" type="TextureProgress" parent="."]
margin_left = 2.35969
margin_top = 84.2408
margin_right = 102.36
margin_bottom = 94.2408
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )

[node name="HelmetOver" type="TextureProgress" parent="."]
margin_left = 2.0
margin_top = 84.0
margin_right = 102.0
margin_bottom = 95.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="BreastplateUnder" type="TextureProgress" parent="."]
margin_left = 102.239
margin_top = 84.0641
margin_right = 202.239
margin_bottom = 94.0641
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )

[node name="BreastplateOver" type="TextureProgress" parent="."]
margin_left = 102.239
margin_top = 84.0641
margin_right = 202.239
margin_bottom = 94.0641
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="PantsUnder" type="TextureProgress" parent="."]
margin_left = 202.206
margin_top = 83.9756
margin_right = 302.206
margin_bottom = 93.9756
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )

[node name="PantsOver" type="TextureProgress" parent="."]
margin_left = 202.0
margin_top = 84.0
margin_right = 302.0
margin_bottom = 94.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="UpdateTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]

[node name="FlashTween" type="Tween" parent="."]
